# BsuirRep

./: 3.3.15.cpp  4.2.15.cpp  5.2.15.cpp  6.2.15.cpp  7.2.13.cpp  7.3.15.cpp  8.2.15.cpp  README.md
1 курс/ОАиП/sem1/: 8.2.15.cpp
1 курс/ОАиП/sem2/: 2.1.15.cpp  2.2.15.cpp  2.4.15.cpp  2.5.15.cpp  2.6.15.cpp
1 курс/ПиОИвИС/sem2/PrTask1/: README.md
1 курс/ПиОИвИС/sem2/PrTask2/: README.md
1 курс/ПиОИвИС/sem2/RR/: algo.gwf  test1.gwf  test2.gwf  test3.gwf  test4.gwf  test5.gwf  tests.gwf
1 курс/ПиОИвИС/sem2/lab1/: README.md  qua.h  quad.cpp
1 курс/ПиОИвИС/sem2/lab2/: README.md  set.cpp  test.txt
2 курс/sem3/МОИС/: README.md
2 курс/sem3/МОИС/LAB1/: lab1.scs
2 курс/sem3/МОИС/LAB2/: lab2.scs
2 курс/sem3/МОИС/LAB3/: Lab3.gwf  Lab3_1.gwf
2 курс/sem3/ОС/LAB1/: OS_Lab1.docx
2 курс/sem3/ОС/LAB2/: Dockerfile  README.txt  main.cpp
2 курс/sem3/ОС/LAB3/: Dockerfile
2 курс/sem3/ОТИС/LAB1/: vend.gwf
2 курс/sem3/ОТИС/LAB3/: lab3.docx
2 курс/sem3/ОТИС/LAB4/: lb4.docx
2 курс/sem3/ППОИС/LAB1/: real_matrix.cpp  test.cpp  (+1 more)
2 курс/sem4/MOIS/: lab1.gwf  lab2.gwf
2 курс/sem4/PPOIS/: Human.py  Supervisor.py  diploma.py  lab1.py  load.py  main111.py  save.py  tests.py
2 курс/МОИС/LAB1/: README.MD  lab1.gwf
2 курс/МОИС/LAB2/: lab2.scs  lab2_otis.docx
2 курс/ОС/LAB1/: lab1.bash
2 курс/ОТИС/: ОТИС1.docx
2 курс/ОТИС/LAB1/: lb1_Vending_automat.docx
2 курс/ППОИС/: lb1.cpp  prim.txt  real_matrix.cpp  real_matrix.h
2 курс/ППОИС/LAB1/: lb1.cpp  real_matrix.cpp
2 курс/ППОИС/LAB2/: CMakeLists.txt  auto_repair_shop.cpp  auto_repair_shop.h  main.cpp  my_tests.cpp  readme.md
2 курс/ППОИС/LAB3/: CMakeLists.txt  Customer.cpp  Customer.h  Employee.h  Factory.cpp  Factory.h  Machine.h  RawMaterial.h  fabriic_system.cpp  fabriic_system.h  main.cpp  mytests.cpp
2 курс/ППОИС/LAB4/: graph.cpp
2 курс/ППОИС/fabriic_system2/: CMakeLists.txt  Human.cpp  Machine.cpp  Product.cpp  RawMaterial.cpp  mytests.cpp
sem3/: README.md
sem3/agent/: README.md  exampleModule.cpp
sem3/agent/agents/: WiseAgent.cpp  WiseAgent.hpp
sem3/agent/keynodes/: keynodes.cpp  keynodes.hpp
sem3/mois/lab4/: README.md
Англ/: There are three levels of  higher education system in UK.docx  belarus.docx
ОАиП/: 3.3.15.cpp  4.2.15.cpp  5.2.15.cpp  6.2.15.cpp  7.2.13(without_array).cpp  7.2.13.cpp
ОАиП/sem1/: 5.2.15.cpp  7.2.13(without_array).cpp  7.3.15.cpp  exam.cpp
ОАиП/sem2/: 2.2.15.cpp  2.3.15.cpp  2.4.15.cpp
ПиОИвИС/RR_4_17_CC/: README.md
ПиОИвИС/RR_4_17_CC/code/: test1.txt  test3.txt  test4.txt  test5.txt
ПиОИвИС/lab1/: lr1.bat  second.txt
ПиОИвИС/lab3/: problem_link.txt
ПиОИвИС/sem1/lab1/: README.md  first.txt  lb1.sh
ПиОИвИС/sem1/lab3/: ostistex.tex
ПиОИвИС/sem2/PrTask1/: reggi.gwf
ПиОИвИС/sem2/PrTask2/: prm2.gwf
ПиОИвИС/sem2/RR/: RR.gwf  test3.gwf
ПиОИвИС/sem2/lab1/: Source.cpp
ПиОИвИС/sem2/lab2/: new_set.cpp
ТМОИС/: lab2code.cpp
(+69 files in other folders)
